# browser

./: .gitignore  ATTRIBUTION.md  BROWSER_INFO_POPUP_SPEC.md  CODE_QUALITY.md  CODE_REVIEW.md  LANDING_PAGE_SPEC.md  README.md  SECURITY.md  package.json
.agent/: README.md
.agent/links/: resources.md
.agent/skills/: browser_ops.py
.agent/spec/: goals.md  rules.yaml  tasks.md
.agent/wiki/: browser.md  domains.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: quality-gates.yml
backend/: README.md
backend/src-tauri/: Cargo.toml  tauri.conf.json
backend/src-tauri/capabilities/: default.json
backend/src-tauri/icons/: icon.icns
backend/src-tauri/src/: gemini.rs  main.rs
frontend/: .audit-ci.json  .eslintrc.js  .prettierignore  .prettierrc  .snyk  README.md  index.html  package-lock.json  package.json  postcss.config.js  sonar-project.properties  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/figma/: README.md  (+3 more)
frontend/src/composables/: useIsMobile.ts
frontend/src/router/: index.ts
frontend/src/stores/: agents.ts
frontend/src/styles/: fonts.css  index.css  macos-variables.less  main.less  tailwind.css  variables.css
frontend/src/utils/: buttonVariants.ts  cn.ts  tauri.ts
frontend/src/views/: Agents.vue  Dashboard.vue  Reports.vue  Settings.vue
frontend/tests/: setup.ts
frontend/tests/components/: BrowserChrome.test.ts  BrowserInfoPopup.test.ts  Dashboard.test.ts  GlassChatBox.test.ts  ImageWithFallback.test.ts
frontend/tests/stores/: agents.test.ts
(+257 files in other folders)
